--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,15 @@
             "email": "alekseykarpelev@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+
+    "autoload": {
+        "psr-4": {
+
+            "App\\": "app"
+        }
+    }
+
+
+
 }
